change font to hack

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -100,11 +100,11 @@ poll-interval = 5
 time-format = %H:%M
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
-;format-full = <label-full>
+format-full = <label-full>
 format-full-prefix = 
-label-charging = "%percentage%% (%time%)"
-label-discharging = "%percentage%% (%time%)"
-;label-full = " Full"
+label-charging = " %percentage%% (%time%)"
+label-discharging = " %percentage%% (%time%)"
+label-full = " "
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
@@ -117,3 +117,21 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 750
 animation-discharging-framerate = 500
+
+[module/powermenu]
+type = custom/menu 
+
+expand-right = false
+format-spacing = 1
+
+label-open = 
+label-open-foreground = ${color.foreground}
+label-close =  cancel
+label-close-foreground = ${color.foreground}
+label-separator = |
+label-separator-foreground = ${color.foreground}
+
+menu-0-0 = reboot
+menu-0-0-exec = systemctl reboot
+menu-0-1 = power off
+menu-0-1-exec = systemctl poweroff
