--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -4,16 +4,16 @@ scrolling:
 
 font: 
   normal:
-    family: monospace
+    family: Hack Nerd Font
     style: Regular
   bold:
-    family: monospace
+    family: Hack Nerd Font
     style: Bold
   italic:
-    family: monospace
+    family: Hack Nerd Font
     style: Italic
   bold_italic:
-    family: monospace
+    family: Hack Nerd Font
     style: Bold Italic
   size: 9.0
 
