--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -24,13 +24,14 @@ padding-right = 1
 ;module-margin-right = 1 
 
 
-font-0 = Droid Sans Mono:style=Regular:pixelsize=10;2
-font-1 = unifont:fontformat=truetype:size=14:antialias=false;2
-font-2 = siji:style=Regular:pixelsize=24;2
-font-3 = Font Awesome 5 Free:pixelsize=12;2
-font-4 = Font Awesome 5 Free Solid:pixelsize=12;2
+font-0 = Hack Nerd Font:style=Regular:size=10;2
+;font-0 = Droid Sans Mono:style=Regular:pixelsize=10;2
+;font-1 = unifont:fontformat=truetype:size=14:antialias=false;2
+;font-2 = siji:style=Regular:pixelsize=24;2
+;font-3 = Font Awesome 5 Free:pixelsize=12;2
+;font-4 = Font Awesome 5 Free Solid:pixelsize=12;2
 
-separator =" | "
+separator ="  "
 tray-position = none 
 ;tray-padding = 2
 
@@ -46,7 +47,7 @@ monitor = eDP-1
 monitor-strict = false
 modules-left = bspwm
 modules-center = title
-modules-right = wifi cpu ram temperature pulseaudio date battery
+modules-right = wifi cpu ram temperature pulseaudio date battery powermenu
 
 [bar/monitor2]
 inherit = bar/main
