--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -2,26 +2,33 @@
 type = internal/bspwm
 pin-workspaces = true
 
-label-focused = %index% %icon%
+label-focused = %icon%
 label-focused-background = ${color.red}
 label-focused-underline= ${color.red}
-label-focused-padding = 2
+label-focused-padding = 1
 
-label-occupied = %index% %icon%
-label-occupied-padding = 2
+label-occupied = %icon%
+label-occupied-padding = 1
 
-label-urgent = %index%!
+label-urgent = %icon%!
 label-urgent-background = ${color.yellow}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 label-empty = %index%
 label-empty-foreground = ${color.foreground}
-label-empty-padding = 2
+label-empty-padding = 1
 
 ; Separator in between workspaces
 ; label-separator = |
+fuzzy-match = false
 label-monitor = %name%
-ws-icon-4 = 4;♞
+ws-icon-0 = I;
+ws-icon-1 = VI;
+ws-icon-2 = II;
+ws-icon-3 = III;
+ws-icon-4 = IV;
+ws-icon-5 = VII;
+ws-icon-default = 
 
 
 [module/date]
@@ -53,6 +60,8 @@ internal = 1.0
 ;format-connected = <ramp-signal>
 format-connected-prefix= 
 label-connected = " %downspeed%|%upspeed%"
+label-disconnected = ""
+label-disconnected-foreground = ${color.yellow}
 
 [module/temperature]
 type = internal/temperature
