--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ set-option -g default-terminal "screen-256color"
 set-option -sg escape-time 10
 set-option -g focus-events on 
 set-option -g prefix C-a
+
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
@@ -12,3 +13,16 @@ set -g base-index 1
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# Tmux Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+
+# Tmux Plugins Config
+set -g @net_speed_interfaces "enp3s0"
+set -g @net_speed_format "D:%10s U:%10s"
+#set -g status-right "#{net_speed}"
+
+run '~/.tmux/plugins/tpm/tpm'
