--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -2,15 +2,15 @@
 type = internal/bspwm
 pin-workspaces = true
 
-label-focused = %icon%
+label-focused = %index%
 label-focused-background = ${color.red}
 label-focused-underline= ${color.red}
 label-focused-padding = 1
 
-label-occupied = %icon%
+label-occupied = %index%
 label-occupied-padding = 1
 
-label-urgent = %icon%!
+label-urgent = %index%!
 label-urgent-background = ${color.yellow}
 label-urgent-padding = 1
 
