--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,11 @@ set-option -sg escape-time 10
 set-option -g focus-events on 
 set-option -g prefix C-a
 
+#Binding Key
 bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+bind-key -r c new-window -c '#{pane_current_path}'
+bind-key -r n next-window
+bind-key -r b previous-window
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
@@ -26,3 +29,13 @@ set -g @net_speed_format "D:%10s U:%10s"
 #set -g status-right "#{net_speed}"
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Styles and Status Bar
+set -g status-style 'bg=#002b36 fg=#fdf6e3'
+
+set -g status-left " #S "
+set -g window-status-format " #I:#W "
+set -g window-status-current-format " #I:#W "
+set -g window-status-current-style 'bg=#268bd2 fg=#eee8d5'
+
+set -g status-right " nurohman.com"
