local eva update

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -47,5 +47,5 @@ inherit = bar/main
 monitor-strict = false
 modules-left = bspwm
 modules-center = title
-modules-right = lan cpu ram temperature pulseaudio date powermenu
+modules-right = lan wifi cpu ram temperature pulseaudio date battery powermenu
 
