--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,15 @@ bind-key -r c new-window -c '#{pane_current_path}'
 bind-key -r n next-window
 bind-key -r b previous-window
 
+bind-key j choose-tree -swZ
+bind C-j display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
+    xargs tmux switch-client -t"
+
+
+
 bind r source-file ~/.tmux.conf
 set -g base-index 1
 
