--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -33,7 +33,8 @@ selection_foreground 	#001e26
 background_opacity 0.9
 
 # Shell
-shell tmux
+#shell tmux
 
 term xterm-kitty
 
+#startup_session $HOME/.config/kitty/startup.conf
