--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@ bind-key -r n next-window
 bind-key -r b previous-window
 
 bind-key j choose-tree -swZ
-bind C-j display-popup -E "\
+bind -n C-j display-popup -E "\
     tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
     sed '/^$/d' |\
     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
