update tmux & nvim navigation

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,8 @@ bind -n C-j display-popup -E "\
     fzf --reverse --header jump-to-session --preview 'tmux capture-pane -pt {}'  |\
     xargs tmux switch-client -t"
 
-
+bind-key -r T display-popup -E "htop"
+bind-key -r | splitw -hc '#{pane_current_path}'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
