--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,4 @@
+set -g default-shell /usr/bin/zsh
 #set -ga terminal-overrides ",xterm-256color*:Tc"
 set-option -g default-terminal "screen-256color"
 set-option -sg escape-time 10
