--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -154,3 +154,12 @@ menu-0-0 = reboot
 menu-0-0-exec = systemctl reboot
 menu-0-1 = power off
 menu-0-1-exec = systemctl poweroff
+
+[module/disk]
+type=internal/fs 
+
+mount-0=/ 
+
+internal=30
+format-mounted = <label-mounted>
+label-mounted= %free%
