change polybar & bspwm

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -43,9 +43,16 @@ eursor-scroll = ns-resize
 
 [bar/monitor1]
 inherit = bar/main
-;monitor = eDP-1
-monitor-strict = false
+monitor = eDP-1
+monitor-strict = true
 modules-left = bspwm
 modules-center = title
 modules-right = lan disk cpu ram temperature pulseaudio battery date powermenu
 
+[bar/monitor2]
+inherit = bar/main
+monitor = DP-1
+monitor-strict = true
+modules-left = bspwm
+modules-center = title
+modules-right = date powermenu
