--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -35,9 +35,10 @@ ws-icon-default = 
 type = internal/date
 interval = 1.0
 time = "%H:%M"
-date = "%a, %d/%m"
+date = "%a, %d/%m/%y"
 format = <label>
 label = %date% %time%
+label-foreground = ${color.red}
 
 [module/cpu]
 type = internal/cpu
@@ -159,6 +160,7 @@ menu-0-1-exec = systemctl poweroff
 type=internal/fs 
 
 mount-0=/ 
+mount-1=/home
 
 internal=30
 format-mounted = <label-mounted>
