--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,18 +28,22 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# Tmux Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# Open Notes
+bind-key -r N neww -da -n "Notes" -c "~/Documents/Personal/note" "nvim temporary.md"\; selectw -t "Notes"
+bind-key -r D neww -da -n "Dotfiles" -c "~/.dotfiles" "nvim"\; selectw -t "Dotfiles"
 
-set -g @plugin 'tmux-plugins/tmux-net-speed'
+# Tmux Plugins
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+
+#set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 # Tmux Plugins Config
-set -g @net_speed_interfaces "enp3s0"
-set -g @net_speed_format "D:%10s U:%10s"
+#set -g @net_speed_interfaces "enp3s0"
+#set -g @net_speed_format "D:%10s U:%10s"
 #set -g status-right "#{net_speed}"
 
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
 
 # Styles and Status Bar
 set -g status-style 'bg=#002b36 fg=#fdf6e3'
