--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -60,9 +60,10 @@ interface = wlp3s0
 internal = 1.0
 ;format-connected = <ramp-signal>
 format-connected-prefix= 
-label-connected = " %downspeed%|%upspeed%"
-label-disconnected = ""
-label-disconnected-foreground = ${color.yellow}
+;label-connected = " %downspeed%|%upspeed%"
+label-connected = "  %essid% (%downspeed%|%upspeed%)"
+;label-disconnected = ""
+;label-disconnected-foreground = ${color.yellow}
 
 [module/lan]
 type = internal/network
@@ -165,3 +166,11 @@ mount-1=/home
 internal=30
 format-mounted = <label-mounted>
 label-mounted= %free%
+
+[module/ippublic]
+type=custom/script 
+exec=curl -s http://v4v6.ipv6-test.com/api/myip.php
+internal=60
+
+format=<label>
+label="%output%"
