--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,7 @@ set-option -g default-terminal "screen-256color"
 set-option -sg escape-time 10
 set-option -g focus-events on 
 set-option -g prefix C-a
+set-option -g remain-on-exit off
 
 #Binding Key
 bind-key C-a send-prefix
