--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -175,4 +175,18 @@ internal=60
 format=<label>
 label="%output%"
 
+[module/vpn]
+type=custom/script
+exec=$HOME/.local/bin/checkvpn
+internal=60
+format=<label>
+label="%output%"
 
+[module/notification]
+type=custom/script
+exec=$HOME/.local/bin/dunststatus
+tail=true
+interval=0 
+format=<label>
+label="%output%"
+click-left=dunstctl set-paused toggle
