--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -47,7 +47,7 @@ monitor = eDP1
 monitor-strict = true
 modules-left = bspwm
 modules-center = ippublic
-modules-right = wifi disk cpu ram temperature pulseaudio battery date powermenu
+modules-right = wifi disk cpu ram temperature pulseaudio notification battery date powermenu
 
 [bar/monitor2]
 inherit = bar/main
@@ -55,4 +55,4 @@ monitor = DP1
 monitor-strict = true
 modules-left = bspwm
 modules-center = title
-modules-right =  date powermenu
+modules-right =  vpn date powermenu
