--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -169,10 +169,11 @@ label-mounted= %free%
 
 [module/ippublic]
 type=custom/script 
-exec=curl -s http://v4v6.ipv6-test.com/api/myip.php
+exec=wget -q -O -- http://v6.ipv6-test.com/api/myip.php --timeout=1 --tries=1 --quiet >/dev/null 2>&1 && echo " v6" || echo " v4"
 internal=60
 
 format=<label>
+format-foreground= ${color.yellow}
 label="%output%"
 
 [module/vpn]
