--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -191,3 +191,10 @@ interval=0
 format=<label>
 label="%output%"
 click-left=dunstctl set-paused toggle
+
+[module/crypto]
+type=custom/script
+exec=/bin/python -Wignore /home/nurohman/Projects/Personal/trading/spot.py 
+interval=60
+format=<label>
+label="%output%"
