--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -2,19 +2,19 @@
 type = internal/bspwm
 pin-workspaces = true
 
-label-focused = %index%
+label-focused = %name%
 label-focused-background = ${color.red}
 label-focused-underline= ${color.red}
 label-focused-padding = 1
 
-label-occupied = %index%
+label-occupied = %name%
 label-occupied-padding = 1
 
-label-urgent = %index%!
+label-urgent = %name%!
 label-urgent-background = ${color.yellow}
 label-urgent-padding = 1
 
-label-empty = %index%
+label-empty = %name%
 label-empty-foreground = ${color.foreground}
 label-empty-padding = 1
 
@@ -22,12 +22,16 @@ label-empty-padding = 1
 ; label-separator = |
 fuzzy-match = false
 label-monitor = %name%
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = V;
-ws-icon-5 = VI;
+ws-icon-0 = 1;
+ws-icon-1 = 22;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = ;
+ws-icon-6 = 7;7 
+ws-icon-7 = 8;8
+ws-icon-8 = 9;9
+ws-icon-9 = 10;10
 ws-icon-default = 
 
 
@@ -169,7 +173,7 @@ label-mounted= %free%
 
 [module/ippublic]
 type=custom/script 
-exec=wget -q -O -- http://v6.ipv6-test.com/api/myip.php --timeout=1 --tries=1 --quiet >/dev/null 2>&1 && echo " v6" || echo " v4"
+exec=wget -q -O -- https://v6.ipv6-test.com/api/myip.php --timeout=1 --tries=1 --quiet >/dev/null 2>&1 && echo " v6" || echo " v4"
 internal=60
 
 format=<label>
