--- a/doh/.config/doh/dnscrypt-proxy.toml
+++ b/doh/.config/doh/dnscrypt-proxy.toml
@@ -1,4 +1,4 @@
-server_names = ['adguard-dns-family-doh']
+server_names = ['adguard-dns-doh']
 listen_addresses = ['127.0.0.1:53','[::1]:53']
 max_clients = 10000 
 
@@ -10,7 +10,7 @@ force_tcp = false
 timeout = 5000
 keepalive = 30
 
-bootstrap_resolvers = ['1.1.1.1:53']
+bootstrap_resolvers = ['9.9.9.9:53']
 ignore_system_dns = true
 
 cache = true
