Update hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -50,13 +50,16 @@ windowrulev2 = float,class:^(flameshot)$
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = size 50% 60%,class:^(pavucontrol)$
 windowrulev2 = center,class:^(pavucontrol)$
-
+windowrulev2 = size 60% 70%:title:^(btop)$
+windowrulev2 = float,title:^(btop)$
+windowrulev2 = center,title:^(btop)$
 
 ## KEY BINDING 
 
 bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
 bind = SUPER, space, exec, dmenu_run
+bind = SUPER_ALT, l , exec, swaylock & disown
 
 bind = SUPER, F, fullscreen,
 bind = SUPER_SHIFT, F, togglefloating,
@@ -85,7 +88,7 @@ bind = SUPER, 6, workspace, 6
 bind = SUPER, 7, workspace, 7 
 bind = SUPER, 8, workspace, 8 
 bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, special 
+bind = SUPER, 0, togglespecialworkspace 
 
 ### Workspace Move 
 bind = SUPER_SHIFT, 1, movetoworkspace, 1
@@ -97,7 +100,10 @@ bind = SUPER_SHIFT, 6, movetoworkspace, 6
 bind = SUPER_SHIFT, 7, movetoworkspace, 7
 bind = SUPER_SHIFT, 8, movetoworkspace, 8
 bind = SUPER_SHIFT, 9, movetoworkspace, 9
-bind = SUPER_SHIFT, 0, movetoworkspace, 0
+bind = SUPER_SHIFT, 0, movetoworkspace, special 
+
+bind = SUPER_SHIFT, s, movecurrentworkspacetomonitor, HDMI-A-1
+bind = SUPER_ALT, s, movecurrentworkspacetomonitor, DP-1
 
 ### Notification 
 bind = SUPER_ALT, c, exec, dunstctl close-all
