delete unused files

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -47,12 +47,18 @@ misc {
 
 ## Window Rules 
 windowrulev2 = float,class:^(flameshot)$
+windowrulev2 = fakefullscreen,class:^(flameshot)$
+#### Pavucontrol
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = size 50% 60%,class:^(pavucontrol)$
 windowrulev2 = center,class:^(pavucontrol)$
+#### BTOP
 windowrulev2 = size 60% 70%:title:^(btop)$
 windowrulev2 = float,title:^(btop)$
 windowrulev2 = center,title:^(btop)$
+#### Chrome Task manager
+windowrulev2 = float,title:^(Task Manager - Google Chrome)$
+windowrulev2 = center,title:^(Task Manager - Google Chrome)$
 
 ## KEY BINDING 
 
@@ -110,4 +116,7 @@ bind = SUPER_ALT, c, exec, dunstctl close-all
 
 
 ### APP 
-bind = SUPER, p, exec, flameshot screen -c 
+bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy
+bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" - | wl-copy 
+bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg
