update hyprland config and date

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -111,12 +111,14 @@ bind = SUPER_SHIFT, 0, movetoworkspace, special
 bind = SUPER_SHIFT, s, movecurrentworkspacetomonitor, HDMI-A-1
 bind = SUPER_ALT, s, movecurrentworkspacetomonitor, DP-1
 
+bind = SUPER, z, swapactiveworkspaces, HDMI-A-1 DP-1
+
 ### Notification 
 bind = SUPER_ALT, c, exec, dunstctl close-all
 
 
 ### APP 
 bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy
-bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png
-bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" - | wl-copy 
+bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = SUPER, p, exec, grim -g "$(slurp)" - | wl-copy 
 bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg
