change from dmenu to fuzzell

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
 exec-once = dunst
+exec-once = udiskie -t &
 
 
 general {
@@ -46,8 +47,7 @@ misc {
 
 
 ## Window Rules 
-windowrulev2 = float,class:^(flameshot)$
-windowrulev2 = fakefullscreen,class:^(flameshot)$
+windowrulev2 = center, class:^(fuzzell)$
 #### Pavucontrol
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = size 50% 60%,class:^(pavucontrol)$
@@ -64,7 +64,7 @@ windowrulev2 = center,title:^(Task Manager - Google Chrome)$
 
 bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
-bind = SUPER, space, exec, dmenu_run
+bind = SUPER, space, exec, fuzzel
 bind = SUPER_ALT, l , exec, swaylock & disown
 
 bind = SUPER, F, fullscreen,
