--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -59,6 +59,8 @@ windowrulev2 = center,title:^(btop)$
 #### Chrome Task manager
 windowrulev2 = float,title:^(Task Manager - Google Chrome)$
 windowrulev2 = center,title:^(Task Manager - Google Chrome)$
+#### Nemo 
+windowrulev2 = float,class:^(nemo),title:(Properties)
 
 ## KEY BINDING 
 
