--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -73,6 +73,10 @@ bind = SUPER, F, fullscreen,
 bind = SUPER_SHIFT, F, togglefloating,
 
 
+### Hardware 
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1366x768, 0x900, 1"
+bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disabled"
+
 ### Window Move SUPER + [j,k,h,l]
 bind = SUPER, j, movefocus, u 
 bind = SUPER, k, movefocus, d
@@ -116,7 +120,7 @@ bind = SUPER_ALT, s, movecurrentworkspacetomonitor, DP-1
 bind = SUPER, z, swapactiveworkspaces, HDMI-A-1 DP-1
 
 ### Notification 
-bind = SUPER_ALT, c, exec, dunstctl close-all
+bind = SUPER_SHIFT, c, exec, dunstctl close-all
 
 
 ### APP 
