--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ workspace=HDMI-A-1,1
 ## Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = swayidle timeout 600 'hyprctl dispatcher dpms off && swaylock'
 exec-once = waybar
 exec-once = dunst
 exec-once = udiskie -t &
@@ -124,7 +125,7 @@ bind = SUPER_SHIFT, c, exec, dunstctl close-all
 
 
 ### APP 
-bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy
-bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png
-bind = SUPER, p, exec, grim -g "$(slurp)" - | wl-copy 
-bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg
+bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy && notify-send "print screen" "Print screen active monitor saved to cliboard."
+bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png && notify-send "print screen" "Print screen active monitor saved to Pitures folder."
+bind = SUPER, p, exec, grim -g "$(slurp)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
+bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg && notify-send "print screen" "Print screen area saved to Pictures folder."
