--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 set -g default-shell /usr/bin/zsh
-#set -ga terminal-overrides ",xterm-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm*:RGB"
 set-option -sg escape-time 10
 set-option -g focus-events on 
 set-option -g prefix C-a
