--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -13,7 +13,8 @@ workspace=HDMI-A-1,1
 ## Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = swayidle timeout 600 'hyprctl dispatcher dpms off && swaylock'
+exec-once = swayidle timeout 600 'hyprctl dispatch dpms off && swaylock' resume 'hyprctl dispatch dpms on'
+exec-once = hyprpaper &
 exec-once = waybar
 exec-once = dunst
 exec-once = udiskie -t &
@@ -69,6 +70,7 @@ bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
 bind = SUPER, space, exec, fuzzel
 bind = SUPER_ALT, l , exec, swaylock & disown
+bind = SUPER_ALT, semicolon, global,  
 
 bind = SUPER, F, fullscreen,
 bind = SUPER_SHIFT, F, togglefloating,
@@ -117,6 +119,7 @@ bind = SUPER_SHIFT, 0, movetoworkspace, special
 
 bind = SUPER_SHIFT, s, movecurrentworkspacetomonitor, HDMI-A-1
 bind = SUPER_ALT, s, movecurrentworkspacetomonitor, DP-1
+bind = SUPER, n, swapnext,
 
 bind = SUPER, z, swapactiveworkspaces, HDMI-A-1 DP-1
 
