--- a/swaylock/.config/swaylock/config
+++ b/swaylock/.config/swaylock/config
@@ -1,7 +1,7 @@
 daemonize
 show-failed-attempts
 clock
-screenshot
+#screenshot
 effect-blur=9x5
 effect-vignette=0.5:0.5
 color=1f1d2e80
@@ -36,3 +36,4 @@ datestr=%a, %B %e
 timestr=%I:%M %p
 fade-in=0.2
 ignore-empty-password
+image=$HOME/Pictures/Wallpaper/wallpaper-01.png
