--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -69,16 +69,18 @@ windowrulev2 = float,class:^(nemo),title:(Properties)
 bind = SUPER, RETURN, exec, kitty
 bind = SUPER, w, killactive,
 bind = SUPER, space, exec, fuzzel
-bind = SUPER_ALT, l , exec, swaylock & disown
-bind = SUPER_ALT, semicolon, global,  
-
-bind = SUPER, F, fullscreen,
-bind = SUPER_SHIFT, F, togglefloating,
+bind = CTRL+ALT, l , exec, swaylock & disown
 
 
 ### Hardware 
 bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1366x768, 0x900, 1"
 bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disabled"
+
+### Window Toggele 
+bind = SUPER, F, fullscreen,
+bind = SUPER, t, togglefloating
+bind = SUPER, t, centerwindow
+
 
 ### Window Move SUPER + [j,k,h,l]
 bind = SUPER, j, movefocus, u 
@@ -91,6 +93,13 @@ bind = SUPER_SHIFT, j, movewindow, u
 bind = SUPER_SHIFT, k, movewindow, d
 bind = SUPER_SHIFT, h, movewindow, l
 bind = SUPER_SHIFT, l, movewindow, r
+
+### Window Resize 
+bind = SUPER_ALT, l, resizeactive, 30 0
+bind = SUPER_ALT, h, resizeactive, -30 0
+bind = SUPER_ALT, j, resizeactive, 0 30
+bind = SUPER_ALT, k, resizeactive, 0 -30
+bind = SUPER_ALT, c, centerwindow
 
 
 ### Workspace SUPER + [1,9]
