add pomodoro fullscreen break message
Fullscreen using kitty and display text using figlet and tput

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -63,6 +63,10 @@ windowrulev2 = float,title:^(Task Manager - Google Chrome)$
 windowrulev2 = center,title:^(Task Manager - Google Chrome)$
 #### Nemo 
 windowrulev2 = float,class:^(nemo),title:(Properties)
+#### Upwork 
+windowrulev2 = nofullscreenrequest, class:^(Upwork)
+windowrulev2 = float,class:^(Upwork)
+windowrulev2 = center,class:^(Upwork)$
 
 ## KEY BINDING 
 
