update waybar script

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,7 +4,8 @@
 # Updated: 22 May 2023
 ##########################
 
-monitor=DP-1,1600x900,0x0,1
+monitor=DP-1,disable
+#monitor=DP-1,1600x900,0x0,1
 monitor=HDMI-A-1,1920x1080,1600x0,1
 monitor=eDP-1,disable
 workspace=HDMI-A-1,1
