update hyprconfig and other

--- a/swaylock/.swaylock/config
+++ b/swaylock/.swaylock/config
@@ -36,4 +36,5 @@ datestr=%a, %B %e
 timestr=%I:%M %p
 fade-in=0.2
 ignore-empty-password
-image=~/Pictures/Wallpaper/wallpaper01.png
+image=~/Pictures/Wallpaper/wallpaper4.jpg
+
