--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,7 @@ bind -n C-j display-popup -E "\
 
 bind-key -r T display-popup -E "htop"
 bind-key -r | splitw -hc '#{pane_current_path}'
+bind-key -r _ splitw -vc '#{pane_current_path}'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
@@ -30,7 +31,7 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Open Notes
-bind-key -r N neww -da -n "Notes" -c "~/Documents/Personal/note" "nvim temporary.md"\; selectw -t "Notes"
+bind-key -r N neww -da -n "Notes" -c "~/Documents/notes" "nvim personal.md"\; selectw -t "Notes"
 bind-key -r D neww -da -n "Dotfiles" -c "~/.dotfiles" "nvim"\; selectw -t "Dotfiles"
 
 # Tmux Plugins
