--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,9 +4,11 @@
 # Updated: 22 May 2023
 ##########################
 
-monitor=DP-1,disable
-#monitor=DP-1,1600x900,0x0,1
-monitor=HDMI-A-1,1920x1080,1600x0,1
+#monitor=DP-1,disable
+#monitor=HDMI-A-1,1920x1080,0x0,1
+#monitor=DP-1,1920x1080,0x0,1
+monitor=DP-1,1920x1080,0x0,1,transform,1
+monitor=HDMI-A-1,1920x1080,1080x0,1,transform,0
 monitor=eDP-1,disable
 workspace=HDMI-A-1,1
 
@@ -18,6 +20,7 @@ exec-once = swayidle timeout 600 'hyprctl dispatch dpms off && swaylock' resume 
 exec-once = hyprpaper &
 exec-once = waybar
 exec-once = dunst
+exec-once = upwork-dbus &
 exec-once = udiskie -t &
 
 
@@ -65,9 +68,10 @@ windowrulev2 = center,title:^(Task Manager - Google Chrome)$
 #### Nemo 
 windowrulev2 = float,class:^(nemo),title:(Properties)
 #### Upwork 
-windowrulev2 = nofullscreenrequest, class:^(Upwork)
+#windowrulev2 = nofullscreenrequest, class:^(Upwork)
+#windowrulev2 = size 70% 60%:title:^(Upwork)
 windowrulev2 = float,class:^(Upwork)
-windowrulev2 = center,class:^(Upwork)$
+windowrulev2 = center,class:^(Upwork)
 
 ## KEY BINDING 
 
@@ -132,7 +136,7 @@ bind = SUPER_SHIFT, 9, movetoworkspace, 9
 bind = SUPER_SHIFT, 0, movetoworkspace, special 
 
 bind = SUPER_SHIFT, s, movecurrentworkspacetomonitor, HDMI-A-1
-bind = SUPER_ALT, s, movecurrentworkspacetomonitor, DP-1
+bind = SUPER, s, movecurrentworkspacetomonitor, DP-1
 bind = SUPER, n, swapnext,
 
 bind = SUPER, z, swapactiveworkspaces, HDMI-A-1 DP-1
@@ -144,5 +148,6 @@ bind = SUPER_SHIFT, c, exec, dunstctl close-all
 ### APP 
 bind = SUPER, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') - | wl-copy && notify-send "print screen" "Print screen active monitor saved to cliboard."
 bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: yes' | grep 'Monitor' | awk '{ print $2 }') ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).png && notify-send "print screen" "Print screen active monitor saved to Pitures folder."
-bind = SUPER, p, exec, grim -g "$(slurp)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
+bind = SUPER, p, exec, grim -g "$(slurp;)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
+bind = SUPER_ALT, p, exec, grim -g "$(slurp; sleep 3)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
 bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg && notify-send "print screen" "Print screen area saved to Pictures folder."
