--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -5,10 +5,9 @@
     "exclusive": true, 
     "passthrough": false,
     "gtk-layer-shell": true,
-    "height": 15,
+    "height": 18,
     "modules-left": [
-        "wlr/workspaces",
-
+        "hyprland/workspaces"
     ],
 
     "modules-center": [
@@ -32,21 +31,12 @@
         "custom/javadate"
     ],
 
-    "wlr/workspaces": {
+
+    "hyprland/workspaces": {
         "format": "{name}",
-        "on-click": "activate",
-        "sort-by-number": true,
-        "presistent_workspaces": {
-            "1":["DP-1"],
-            "2":["DP-1"],
-            "3":["DP-1"],
-            "4":["DP-1"],
-            "5":["DP-1"],
-            "6":["HDMI-A-1"],
-            "7":["HDMI-A-1"],
-            "8":["HDMI-A-1"],
-            "9":["HDMI-A-1"],
-            "10":["HDMI-A-1"]
+        "persistent_workspaces": {
+            "HDMI-A-1": [1,2,3,4,5],
+            "DP-1": [6,7,8]
         }
     },
 
