--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@
 #monitor=DP-1,1920x1080,0x0,1
 monitor=DP-1,1920x1080,0x0,1,transform,1
 monitor=HDMI-A-1,1920x1080,1080x0,1,transform,0
-monitor=eDP-1,disable
+monitor=eDP-1,disabled
 workspace=HDMI-A-1,1
 
 
@@ -82,7 +82,7 @@ bind = CTRL+ALT, l , exec, swaylock & disown
 
 
 ### Hardware 
-bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1366x768, 0x900, 1"
+bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1366x768, 0x0, 1"
 bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disabled"
 
 ### Window Toggele 
