migrate to new device

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -4,19 +4,18 @@
 # Updated: 22 May 2023
 ##########################
 
-#monitor=DP-1,disable
-#monitor=HDMI-A-1,1920x1080,0x0,1
-#monitor=DP-1,1920x1080,0x0,1
-monitor=DP-1,1920x1080,0x0,1,transform,1
-monitor=HDMI-A-1,1920x1080,1080x0,1,transform,0
-monitor=eDP-1,disabled
-workspace=HDMI-A-1,1
+#monitor=eDP-1,disable
+#monitor=HDMI-A-1,1920x1080,-1080x0,1,transform,1
+monitor=eDP-1,1920x1200,1920x0,1
+monitor=DP-7,1920x1200,0x0,1
+monitor=DP-8,1920x1200,-1080x-540,1,transform,1
+workspace=DP-7,1
 
 
 ## Start default apps
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = swayidle timeout 600 'hyprctl dispatch dpms off && swaylock' resume 'hyprctl dispatch dpms on'
+#exec-once = swayidle timeout 600 'hyprctl dispatch dpms off && swaylock' resume 'hyprctl dispatch dpms on'
 exec-once = hyprpaper &
 exec-once = waybar
 exec-once = dunst
@@ -82,8 +81,15 @@ bind = CTRL+ALT, l , exec, swaylock & disown
 
 
 ### Hardware 
-bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1366x768, 0x0, 1"
-bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disabled"
+#bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1200, 0x0, 1"
+#bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disabled"
+bindl=,switch:off:Lid Switch,exec, monitor.sh -l on
+bindl=,switch:on:Lid Switch,exec, monitor.sh -l off
+bindl=,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindl=,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindl=,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindl=,XF86MonBrightnessUp, exec, $HOME/.local/bin/monitor.sh -B
+bindl=,XF86MonBrightnessDown, exec, $HOME/.local/bin/monitor.sh -b
 
 ### Window Toggele 
 bind = SUPER, F, fullscreen,
@@ -133,13 +139,16 @@ bind = SUPER_SHIFT, 6, movetoworkspace, 6
 bind = SUPER_SHIFT, 7, movetoworkspace, 7
 bind = SUPER_SHIFT, 8, movetoworkspace, 8
 bind = SUPER_SHIFT, 9, movetoworkspace, 9
-bind = SUPER_SHIFT, 0, movetoworkspace, special 
+bind = SUPER_SHIFT, 0, movetoworkspace, special
 
-bind = SUPER_SHIFT, s, movecurrentworkspacetomonitor, HDMI-A-1
-bind = SUPER, s, movecurrentworkspacetomonitor, DP-1
+#bind = SUPER_SHIFT, s, movecurrentworkspacetomonitor, eDP-1
+#bind = SUPER, s, movecurrentworkspacetomonitor, HDMI-A-1
 bind = SUPER, n, swapnext,
 
-bind = SUPER, z, swapactiveworkspaces, HDMI-A-1 DP-1
+#bind = SUPER, z, swapactiveworkspaces, DP-7 DP-8
+bind = SUPER_CTRL, 1, movecurrentworkspacetomonitor, DP-8
+bind = SUPER_CTRL, 2, movecurrentworkspacetomonitor, DP-7
+bind = SUPER_CTRL, 3, movecurrentworkspacetomonitor, eDP-1
 
 ### Notification 
 bind = SUPER_SHIFT, c, exec, dunstctl close-all
