--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
-preload = ~/Pictures/Wallpaper/wallpaper3.png
-preload = ~/Pictures/Wallpaper/wallpaper1.png
+preload = ~/Pictures/Wallpaper/wallpaper4.jpg
 
-wallpaper = HDMI-A-1,~/Pictures/Wallpaper/wallpaper3.png
-wallpaper = DP-1,~/Pictures/Wallpaper/wallpaper3.png
+wallpaper = eDP-1,~/Pictures/Wallpaper/wallpaper4.jpg
+wallpaper = DP-7,~/Pictures/Wallpaper/wallpaper4.jpg
+wallpaper = DP-8,~/Pictures/Wallpaper/wallpaper4.jpg
 
