change nix and other functions

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@
 monitor=eDP-1,1920x1200,1920x0,1
 monitor=DP-7,1920x1200,0x0,1
 monitor=DP-8,1920x1200,-1080x-540,1,transform,1
+monitor=HDMI-A-1,1024x768,auto,1,mirror,eDP-1
 workspace=DP-7,1
 
 
@@ -160,3 +161,4 @@ bind = SUPER_SHIFT, m, exec, grim -o $(hyprctl monitors | grep -B 10 'focused: y
 bind = SUPER, p, exec, grim -g "$(slurp;)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
 bind = SUPER_ALT, p, exec, grim -g "$(slurp; sleep 3)" - | wl-copy && notify-send "print screen" "Print screen area saved to clipboard." 
 bind = SUPER_SHIFT, p, exec, grim -g "$(slurp)" ~/Pictures/Screenshot/$(date +%Y-%m-%d_%H-%m-%s).jpg && notify-send "print screen" "Print screen area saved to Pictures folder."
+bind = SUPER_ALT,m , exec, $HOME/.local/bin/monitor.sh -w
