--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
-preload = ~/Pictures/Wallpaper/wallpaper4.jpg
+preload = ~/Pictures/Wallpaper/wallpaper1.jpg
 
-wallpaper = eDP-1,~/Pictures/Wallpaper/wallpaper4.jpg
-wallpaper = DP-7,~/Pictures/Wallpaper/wallpaper4.jpg
-wallpaper = DP-8,~/Pictures/Wallpaper/wallpaper4.jpg
-
+wallpaper = eDP-1,~/Pictures/Wallpaper/wallpaper1.jpg
+wallpaper = DP-7,~/Pictures/Wallpaper/wallpaper1.jpg
+wallpaper = DP-8,~/Pictures/Wallpaper/wallpaper1.jpg
+wallpaper = HDMI-A-1, ~/Pictures/Wallpaper/wallpaper1.jpg
